# requests_oauth2client

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CODEOWNERS  CONTRIBUTING.md  HISTORY.md  LICENSE  LICENSE-Apache-2.0  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: dev.yml  pre-commit-autoupdate.yml  publish-test-pypi.yml  release.yml  tests.yml  update-pre-commit.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: api.md  authors.md  contributing.md  history.md  index.md  installation.md  usage.md
history/: index.html
installation/: index.html
requests_oauth2client/: __init__.py  api_client.py  auth.py  authorization_code.py  authorization_request.py  backchannel_authentication.py  client.py  client_authentication.py  deprecated.py  device_authorization.py  discovery.py  dpop.py  enums.py  exceptions.py  jwskate.py  oidc.py  polling.py  pooling.py  serializers.py  token_response.py  tokens.py  utils.py
requests_oauth2client/flask/: __init__.py  auth.py
requests_oauth2client/vendor_specific/: __init__.py  auth0.py  ping.py
search/: search_index.json
tests/: .coveragerc  conftest.py  test_api_client.py  test_auth.py  test_auth0.py  test_authorization_code.py  test_authorization_request.py  test_client.py  test_client_authentication.py  test_client_credentials.py  test_deprecated_metaclass.py  test_deprecated_names.py  test_device_authorization.py  test_discovery.py  test_examples.py  test_flask.py  test_oidc.py  test_pkce.py  test_protected_resource_metadata.py  test_refresh_token.py  test_token_exchange.py  test_token_response.py  test_utils.py  utils.py
tests/unit_tests/: conftest.py  test_api_client.py  test_auth.py  test_auth0.py  test_authorization_request.py  test_backchannel_authentication.py  test_client.py  test_client_authentication.py  test_device_authorization.py  test_discovery.py  test_dpop.py  test_flask.py  test_jwskate.py  test_oidc.py  test_pkce.py  test_serializers.py  test_tokens.py  test_utils.py
tests/unit_tests/vendor_specific/: test_auth0.py  test_ping.py
usage/: index.html
