[project]
name = "requests_oauth2client"
version = "1.8.0"
description = "An OAuth2.x client based on `requests`."
authors = [{ name = "Guillaume Pujol", email = "guillp.dev@pm.me" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "attrs>=25.3.0",
    "backports-strenum>=1.3.1 ; python_full_version < '3.11'",
    "binapy>=0.8",
    "jwskate>=0.12.2",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
    "yarl>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/guillp/requests_oauth2client"

[dependency-groups]
dev = [
    "flask>=3.0.3",
    "livereload>=2.6.3",
    "mypy>=1.8",
    "pre-commit>=3.5.0",
    "toml>=0.10.2",
    "types-requests>=2.25.10",
    "types-cryptography>=3.3.15",
    "virtualenv>=20.30.0",
]
doc = [
    "griffe-fieldz>=0.3.0",
    "mkdocs>=1.3.1",
    "mkdocs-autorefs>=0.3.0",
    "mkdocs-include-markdown-plugin>=6",
    "mkdocs-material>=9.6.11",
    "mkdocs-material-extensions>=1.0.1",
    "mkdocstrings[python]>=0.29.1",
]
test = [
    "coverage>=7.8.0",
    "pytest>=7.0.1",
    "pytest-cov>=5.0.0",
    "pytest-examples>=0.0.17",
    "pytest-freezer>=0.4.8",
    "pytest-mock>=3.14.0,<4",
    "pytest-mypy>=1.0.0",
    "requests-mock>=1.9.3",
]

[tool.hatch.build.targets.sdist]
include = [
    "requests_oauth2client",
    "tests",
]

[tool.hatch.build.targets.wheel]
include = ["requests_oauth2client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["requests_oauth2client"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
    "if TYPE_CHECKING:",
]

[tool.docformatter]
black = true
recursive = true
wrap-summaries = 120
wrap-descriptions = 120
blank = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # any-type in function args
    "N818", # Exception names should be named with an Error suffix
    "PLR0912", # Too many branches
    "D105", # Undocumented magic method
    "D107", # Missing docstring in `__init__`
    "S105", # Possible hardcoded password
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ARG001", "B018", "D100", "D101", "D102", "D103", "D104", "F821", "FBT001", "PGH005", "PLR0913", "PLR0915", "PLR2004", "S101", "S106", "S113",
"PT011", "E501"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ['override']

[tool.mypy]
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
requests_mock_case_sensitive = true
markers = [
    "slow: marks tests as slow"
]
filterwarnings = [
    "ignore::DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead."
]
